--- a/style.css
+++ b/style.css
@@ -12,21 +12,41 @@ body{
     height: 100%;
 }
 .calculator{
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     height:50%;
     width:20%;
+    position: absolute;
+    top: 20%;
+
+    border: 3px solid rgba(128, 128, 128 0.1);
+    background-color: white;
+    background-clip: padding-box;
+    border-radius: 5%;
+
+    border-bottom: 6px solid rgba(128, 128, 128, 0.5);
+    border-right: 6px solid rgba(128, 128, 128, 0.5);
 }
 .screen{
-    border: 3px solid black;
     height: 20%;
-    background-color: aliceblue;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.63);
+    text-align: end;
+}
+#DSPN{
+    color: rgba(22, 163, 182, 0.623);
+    font-size: 70px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
 }
 .buttons{
-    border: 3px solid black;
     height: 80%;
     display: flex;
+    background-color: darkcyan;
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 3.8%;
 }
 .numbers{
     display: flex;
@@ -43,28 +63,47 @@ body{
 }
 
 .numbers button{
-    height:25%;
-    width:33.3333333333%;
+    height:12.5%;
+    width:16.66666665%;
+    margin-left: 8.333333325%;
+    margin-right: 8.333333325%;
+    margin-top: 7.75%;
+    margin-bottom: 7.75%;
 }
 
 .operators button{
-    height:18.75%;
-    width:100%;
+    width:50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    height:15%;
+    margin-top: 20%;
 }
+
 button{
-    background-color: aquamarine;
-    border: 2px solid brown;
+    background-color: rgb(98, 74, 235);
+
+    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+    border-right: 4px solid rgba(0, 0, 0, 0.5);
+
     font-size: larger;
     font-weight: bolder;
     transition-duration: 0.4s;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border-radius: 35%;
 }
+
 button:hover{
-    background-color: aqua;
-    color: white;
+    background-color: rgb(74, 55, 182);
+}
+
+button:active{
+    background-color: rgb(74, 55, 182);
+    border: 2px solid rgb(41, 39, 39);
+    color: black;
 }
 
 #equals{
     height: 25%;
+    margin-bottom: 33.33%;
 }
 
